--- a/src_front/frontEndV3/app/src/main/AndroidManifest.xml
+++ b/src_front/frontEndV3/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.example.frontendv3">
 
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
     <dist:module dist:instant="true" />
 
     <application
